code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__compaction_checkpoint_warning_notice.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: frame
---
 +----------------------------------------------------------------------------+
 |                                 Magik Code                                 |
 |                      Not signed in: usage unavailable                      |
 +----------------------------------------------------------------------------+

 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands


 ★ History checkpoint: earlier conversation compacted.


 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                       Ctrl+G editor  •  API key
