code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__context_cell_baseline.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---
 +----------------------------------------------------------------------------+
 |                                 Magik Code                                 |
 |                      Not signed in: usage unavailable                      |
 +----------------------------------------------------------------------------+

   - Writing code
   - Reading files
   - Running commands


 ✶ 📁 /workspace
    feature/context-ui  🧠 medium

 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                       Ctrl+G editor  •  API key
