code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_help_overlay_open.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: open
---
 +------------------------------------------------------------------------------------------------+
 |                                           Magik Code                                           |
 |                                Not signed in: usage unavailable                                |
 +------------------------------------------------------------------------------------------------+
 +Settings ▸ Overview-----------------------------------------------------------------------------+
 |                                                                                                |
 | › Model              Model: GPT-5.2-Codex (Medium)                                             |
 |   + Choose the language mo+----------------------------------------+                           |
 |                           |Settings Overview                       |                           |
 |   Theme              Theme|                                        |mond                       |
 |   + Switch between preset |• ↑/↓  Move between sections            |                           |
 |                           |• Enter  Open selected section          |                           |
 |   Magik Settings     Reaso|• Tab    Jump forward between sections  |ff · Corners: Sharp        |
 |   + Custom Magik features |• Esc    Close settings                 |                           |
 |                           |• ?      Toggle this help               |                           |
 |   Updates            Auto |                                        |                           |
 |   + Control CLI auto-updat|Press Esc to close                      |                           |
 |                           +----------------------------------------+                           |
 | ↑ ↓ Move    Enter Open    Esc Close    ? Help                                                  |

 |                                                                                                |
 +------------------------------------------------------------------------------------------------+

 +------------------------------------------------------------------------------------------------+
 | What can I code for you today?                                                                 |
 +------------------------------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                                           Ctrl+G editor  •  API key
